# codevs_reborn

./: .gitignore  CMakeLists.txt  README.md  common.cpp  common.h  main.cpp  run.sh  save.sh  zip.sh
strategy/: antiSkillStrategy.cpp  antiSkillStrategy.h  beamSearchStrategy.cpp  beamSearchStrategy.h  chainStrategy.cpp  chainStrategy.h  onlyChainStrategy.cpp  onlyChainStrategy.h  prioritizeSkillStrategy.cpp  prioritizeSkillStrategy.h  randomStrategy.cpp  randomStrategy.h  simpleStrategy.cpp  simpleStrategy.h  skillStrategy.cpp  skillStrategy.h  switchableStrategy.cpp  switchableStrategy.h
